--- a/service.html
+++ b/service.html
@@ -211,7 +211,7 @@
         </div>
         <div class="breadcrumb-list">
           <ul class="breadcrumb">
-            <li>You are here:</li>
+            <li>Вы здесь:</li>
             <li><a href="index.html">Главная</a></li>
             <li>Наши услуги</li>
           </ul>
@@ -232,11 +232,9 @@
             <i class="fa fa-eyedropper"></i>
           </div>
           <div class="icon_description">
-            <h2>EDITOR </h2>
+            <h2>Легковые автомобили </h2>
             <div class="icon_description_text">
-              <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into
-                a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his
-                brown belly.</p>
+              <p>Мы перевозим любые легковые автомобили всех возможных типов кузовов, массы и габаритных размеров. Это могут быть седаны или купе, кабриолеты и хэтчбеки, кроссоверы и тяжёлые внедорожники спортивные и повседневные, с высоким клиренсом и низко посаженные - одним словом, любые. </p>
             </div>
           </div>
         </div>
@@ -249,11 +247,9 @@
             <i class="fa fa-desktop"></i>
           </div>
           <div class="icon_description">
-            <h2>MARKETING & PR </h2>
+            <h2>Коммерческий транспорт </h2>
             <div class="icon_description_text">
-              <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into
-                a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his
-                brown belly.</p>
+              <p>В нашем распоряжении есть большое количество специализированных прицепов для транспортировки коммерческих автомобилей, микроавтобусов, пикапов, а также любых других видов транспортных средств. Мы чётко знаем правила перевозки подобного рода транспорта и не допустим даже малейшего повреждения. </p>
             </div>
           </div>
         </div>
@@ -266,11 +262,9 @@
             <i class="fa fa-film"></i>
           </div>
           <div class="icon_description">
-            <h2>WEB DESIGN </h2>
+            <h2>Грузовые автомобили </h2>
             <div class="icon_description_text">
-              <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into
-                a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his
-                brown belly.</p>
+              <p>Транспортировка тяжеловесных автотранспортных средств накладывает серьёзные требования на перевозчика в процессе подготовки к доставки такого рода грузов. Наши специалисты имеют огромный опыт в организации перевозки грузовиков и автобусов на любые расстояния. Доверьте вашу технику профессионалам.  </p>
             </div>
           </div>
         </div>
@@ -283,11 +277,9 @@
             <i class="fa fa-microphone"></i>
           </div>
           <div class="icon_description">
-            <h2>MICROPHONE </h2>
+            <h2>Транспорт </h2>
             <div class="icon_description_text">
-              <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into
-                a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his
-                brown belly.</p>
+              <p>Помимо классических видов перевозок, мы также осуществляем доставку любых других видов транспорта - как пример, можно привести мотоциклетную или даже водную технику. Впрочем, для нас нет ограничений, если вам нужно переместить вертолёт - обращайтесь, мы найдём решение в кратчайшие сроки.  </p>
             </div>
           </div>
         </div>
@@ -300,11 +292,9 @@
             <i class="fa fa-codepen"></i>
           </div>
           <div class="icon_description">
-            <h2>DEVELOPMENT </h2>
+            <h2>Страхование </h2>
             <div class="icon_description_text">
-              <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into
-                a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his
-                brown belly.</p>
+              <p>Мы понимаем, насколько ценный и важный груз везём, поэтому ответственно относимся к делу и не допускаем полумер в процессе организации и осуществления перевозки. Но для большей уверенности мы подготовили для вас оптимальные программы страхования имущства для полной уверенности в сохранности груза. </p>
             </div>
           </div>
         </div>
@@ -317,11 +307,9 @@
             <i class="fa fa-camera"></i>
           </div>
           <div class="icon_description">
-            <h2>PHOTOGRAPHY</h2>
+            <h2>Отслеживание</h2>
             <div class="icon_description_text">
-              <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into
-                a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his
-                brown belly.</p>
+              <p>Современные системы позиционирования GPS и ГЛОНАСС позволяют в реальном времени получать данные о местоположении автовоза с вашим автомобилем. Мы не скрываем эти данные и охотно предоставляем по первому требованию - вы всегда будете знать, где именно находится ваше транспортное средство.</p>
             </div>
           </div>
         </div>
@@ -370,100 +358,14 @@
       <div class="col-md-12">
         <div class="service-point-text">
           <h3>НАША <strong>МИССИЯ</strong></h3>
-          <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which
-            <br/>I enjoy with my whole heart. I am alone, and feel the charm of existence.</p>
+          <p>Главное в нашей работе - довольный клиент. Ведь только человек, получивший качественный сервис, воспользуется услугами компании повторно. Наши специалисты понимают эту простую истину, поэтому делают всё возможное для решения любых ситуаций максимально быстро. </p>
         </div>
       </div>
     </div>
   </div>
 </div>
 <!-- service-point-area end -->
-<!-- service-accordion-area start -->
-<div class="service-accordion-area">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="service-accordion">
-          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingOne">
-                <h4 class="panel-title">
-                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
-                     aria-expanded="true" aria-controls="collapseOne">
-                    Simple Spoiler
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body">
-                  <div class="service-acc-img">
-                    <img src="img/service/compass.jpg" alt=""/>
-                  </div>
-                  <div class="service-acc-text">
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                      which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which
-                      was created.</p>
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                      which I enjoy with my whole heart. I am alone, and feel the charm of.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingTwo">
-                <h4 class="panel-title">
-                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"
-                     aria-expanded="false" aria-controls="collapseTwo">
-                    Simple Spoiler
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                <div class="panel-body">
-                  <div class="service-acc-img">
-                    <img src="img/service/service02.jpg" alt=""/>
-                  </div>
-                  <div class="service-acc-text">
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                      which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which
-                      was created.</p>
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                      which I enjoy with my whole heart. I am alone, and feel the charm of.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingThree">
-                <h4 class="panel-title">
-                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                     href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Simple Spoiler
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                <div class="panel-body">
-                  <div class="service-acc-img">
-                    <img src="img/service/service01.jpg" alt=""/>
-                  </div>
-                  <div class="service-acc-text">
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                      which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which
-                      was created.</p>
-                    <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                      which I enjoy with my whole heart. I am alone, and feel the charm of.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- service-accordion-area end -->
+
 
 <!-- footer start -->
 <footer>
