--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
                 <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="contact-us.html">Контакты</li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
