--- a/service.html
+++ b/service.html
@@ -443,7 +443,7 @@
                 <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="contact-us.html">Контакты</li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
