--- a/index-2.html
+++ b/index-2.html
@@ -60,8 +60,8 @@
         <link rel="stylesheet" href="css/main.css">
 		
 		<!-- style CSS
-		============================================ -->			
-        <link rel="stylesheet" href="style.css">
+		============================================ -->
+        <link rel="stylesheet" href="css/style.css">
 		
 		<!-- responsive CSS
 		============================================ -->			
