--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -188,7 +188,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -978,7 +978,7 @@
                 <li><a href="about-us.html">О компании</a></li>
                 <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a></li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
