--- a/directions.html
+++ b/directions.html
@@ -100,8 +100,8 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Направления</a>
+                <li><a href="service.html">Услуги</a></li>
+                <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
                     <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
@@ -135,7 +135,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -159,8 +159,8 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Направления</a>
+                <li><a href="service.html">Услуги</a></li>
+                <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
                     <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
@@ -194,7 +194,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -806,9 +806,9 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a></li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
