--- a/moscow-novosib.html
+++ b/moscow-novosib.html
@@ -95,7 +95,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
@@ -130,7 +130,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -154,7 +154,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
@@ -189,7 +189,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -875,9 +875,9 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Направления</a></li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="service.html">Услуги</a></li>
+                <li><a href="directions.html">Направления</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
