--- a/pages/office.html
+++ b/pages/office.html
@@ -99,9 +99,9 @@
             <nav>
               <ul id="nav">
                 <li><a href="../index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
-                <li><a href="#">Направления</a>
+                <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
@@ -135,7 +135,7 @@
                     <li><a href="#">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
               </ul>
             </nav>
@@ -158,9 +158,9 @@
             <nav id="dropdown">
               <ul>
                 <li><a href="../index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
-                <li><a href="#">Направления</a>
+                <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
                     <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
@@ -194,7 +194,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
               </ul>
             </nav>
@@ -343,10 +343,10 @@
             <nav>
               <ul>
                 <li><a href="../index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
-                <li><a href="#">Направления</a></li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="directions.html">Направления</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
               </ul>
             </nav>
