--- a/service.html
+++ b/service.html
@@ -130,7 +130,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -189,7 +189,7 @@
                     <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -442,7 +442,7 @@
                 <li><a href="about-us.html">О компании</a></li>
                 <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a></li>
-                <li><a href="#">Автопарк</a></li>
+                <li><a href="transport.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
