--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>GTrans | перевозка любых автомобилей по России и СНГ</title>
+  <title>GTrans | Перевозка любых автомобилей по России и СНГ</title>
   <meta name="description"
         content="Компания Gtrans перевозит автомобили любого типа по России и странам СНГ - легковые, коммерческие, грузовые, автобусы">
 
