--- a/transport.html
+++ b/transport.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Team 2 - Intensy</title>
+  <title>GTrans | Автопарк</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
@@ -386,29 +386,29 @@
             <!-- progress start -->
             <div class="progress">
               <div class="lead">Классические автовозы</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="45%" style="width: 45%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>45%</span></div>
+              <div class="progress-bar wow fadeInLeft" data-progress="30%" style="width: 30%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>30%</span></div>
             </div>
             <!-- progress end -->
             <!-- progress start -->
             <div class="progress">
               <div class="lead">Тягачи-автовозы</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="35%" style="width: 35%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>35%</span></div>
+              <div class="progress-bar wow fadeInLeft" data-progress="25%" style="width: 25%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>25%</span></div>
             </div>
             <!-- progress end -->
             <!-- progress start -->
             <div class="progress">
-              <div class="lead">Women accessories sale</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="81%" style="width: 81%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>81%</span></div>
+              <div class="lead">Полуприцепы автовозы</div>
+              <div class="progress-bar wow fadeInLeft" data-progress="15%" style="width: 15%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>15%</span></div>
             </div>
             <!-- progress end -->
             <!-- progress start -->
             <div class="progress">
-              <div class="lead">Men accessories sale</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="71%" style="width: 71%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>71%</span></div>
+              <div class="lead">Автовозы-эвакуаторы</div>
+              <div class="progress-bar wow fadeInLeft" data-progress="3%" style="width: 6%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>3%</span></div>
             </div>
             <!-- progress end -->
           </div>
@@ -419,30 +419,30 @@
           <div class="skill">
             <!-- progress start -->
             <div class="progress">
-              <div class="lead">Product popular</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="99%" style="width: 99%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>99%</span></div>
+              <div class="lead">Крытый автовоз</div>
+              <div class="progress-bar wow fadeInLeft" data-progress="12%" style="width: 15%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>12%</span></div>
             </div>
             <!-- progress end -->
             <!-- progress start -->
             <div class="progress">
-              <div class="lead">Marketing rank</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="90%" style="width: 90%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>90%</span></div>
+              <div class="lead">Грузовой</div>
+              <div class="progress-bar wow fadeInLeft" data-progress="10%" style="width: 12%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>10%</span></div>
             </div>
             <!-- progress end -->
             <!-- progress start -->
             <div class="progress">
-              <div class="lead">Global business</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="81%" style="width: 81%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>81%</span></div>
+              <div class="lead">Фургон-автовоз</div>
+              <div class="progress-bar wow fadeInLeft" data-progress="4%" style="width: 7%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>4%</span></div>
             </div>
             <!-- progress end -->
             <!-- progress start -->
             <div class="progress">
-              <div class="lead">Online business</div>
-              <div class="progress-bar wow fadeInLeft" data-progress="71%" style="width: 71%;" data-wow-duration="1.5s"
-                   data-wow-delay="1.2s"><span>71%</span></div>
+              <div class="lead">Специальные автовозы</div>
+              <div class="progress-bar wow fadeInLeft" data-progress="1%" style="width: 3%;" data-wow-duration="1.5s"
+                   data-wow-delay="1.2s"><span>1%</span></div>
             </div>
             <!-- progress end -->
           </div>
