--- a/moscow-ekb.html
+++ b/moscow-ekb.html
@@ -490,18 +490,18 @@
       <div class="awesome-portfolio-content">
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a class="fancybox" href="img/portfolio/sedan.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/sedan.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Седаны и хэтчбеки</h3>
-              <p>Перевозим легковые седаны и хэтчбеки любой конфигурации, массы, длины и других параметров</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all ligth">
-          <a class="fancybox" href="img/portfolio/universal.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/universal.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Универсалы</h3>
@@ -513,29 +513,29 @@
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a class="fancybox" href="img/portfolio/coupe.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/coupe.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Кабриолеты и купе</h3>
-              <p>Перевозим редкие и эксклюзивные автомобили в кузовах типа кабриолет и купе</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all moto">
-          <a class="fancybox" href="img/portfolio/bike.jpg" data-fancybox-group="group">
+          <>
             <div class="awesome-img"><img src="img/portfolio/bike.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Мотоциклы и квадроциклы</h3>
-              <p>Перевезём ваш мотоциклетный транспорт любого вида быстро и безопасно</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a class="fancybox" href="img/portfolio/crossover.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/crossover.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Кроссоверы</h3>
@@ -551,7 +551,7 @@
             <div class="awesome-img"><img src="img/portfolio/offroad.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Пикапы и внедорожники</h3>
-              <p>Поможем вам перевезти внедорожные автомобили любого формата, в том числе бронированные</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
@@ -574,7 +574,7 @@
             <div class="awesome-img"><img src="img/portfolio/microbus.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Микроавтобусы</h3>
-              <p>Наши автовозы приспособлены для перевозки любого транспорта, в том числе микроавтобусов</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
@@ -585,8 +585,7 @@
             <div class="awesome-img"><img src="img/portfolio/bus.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Автобусы</h3>
-              <p>Специализированные прицепы позволяют производить транспортировку автобусов максимально эффективно</p>
-            </div>
+<button href="contact-us.php" class="readon">Перевезти</button>            </div>
           </a>
         </div>
         <!-- single-awesome-portfolio end -->
@@ -596,8 +595,7 @@
             <div class="awesome-img"><img src="img/portfolio/truck.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Грузовики</h3>
-              <p>Тяжелые прицепы для транспортировки грузового автотранспорта позволяют перемещать несколько единиц
-                техники за раз</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
@@ -802,6 +800,66 @@
   </div>
   <!-- bottom blog end -->
 </div>
+
+<!-- Form start -->
+<div class="landing__form" id="form">
+  <div class="container">
+    <div class="row">
+      <!-- contact-accordion start -->
+      <div class="col-lg-8 col-md-8 col-sm-12 col-lg-offset-2 col-md-offset-2">
+        <h2 class="contact-name">Форма заявки</h2>
+        <div class="contact-accordion">
+          <div class="contact-content">
+            <div class="contact-form-ac">
+              <p>Отправить заявку на перевозку</p>
+              <p class="small-text">* - обязательные поля</p>
+              <form>
+                <div class="row">
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="control-level">
+                      <label class="form-label" for="name"><span>Ваше имя</span> *</label>
+                      <input id="name" name="name" type="text"/>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="control-level">
+                      <label class="form-label" for="phone"><span>Телефон</span> *</label>
+                      <input id="phone" name="phone" type="tel"/>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="control-level">
+                      <label class="form-label" for="from"><span>Откуда</span></label>
+                      <input id="from" name="from" type="text"/>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="control-level">
+                      <label class="form-label" for="to"><span>Куда</span></label>
+                      <input id="to" name="to" type="text"/>
+                    </div>
+                  </div>
+                  <div class="col-md-12 col-sm-12">
+                    <div class="textarea-contact">
+                      <label  class="form-label" for="textfield"><span>Сообщение</span></label>
+                      <textarea class="textfield" id="textfield" cols="30" rows="10"></textarea>
+                    </div>
+                  </div>
+                  <div class="message"></div>
+                  <button class="readon" type="submit">Отправить заявку</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <!-- accordion end -->
+
+        </div>
+      </div>
+      <!-- contact-accordion end -->
+    </div>
+  </div>
+</div>
+<!-- Form end -->
 <!-- footer start -->
 <footer>
   <!-- footer-top-area start -->
