--- a/index.html
+++ b/index.html
@@ -629,57 +629,52 @@
     <div class="awesome-portfolio-content">
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all light">
-        <a class="fancybox" href="img/portfolio/sedan.jpg" data-fancybox-group="group">
+        <a>
           <div class="awesome-img"><img src="img/portfolio/sedan.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Седаны и хэтчбеки</h3>
-            <p>Перевозим легковые седаны и хэтчбеки любой конфигурации, массы, длины и других параметров</p>
+            <button href="contact-us.php" class="readon">Перевезти</button>
           </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all ligth">
-        <a class="fancybox" href="img/portfolio/universal.jpg" data-fancybox-group="group">
+        <a>
           <div class="awesome-img"><img src="img/portfolio/universal.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Универсалы</h3>
-            <p>Поможем вам провести транспортировку как обычных универсалов, так и модификаций повышенной
-              проходимости</p>
-          </div>
+            <button href="contact-us.php" class="readon">Перевезти</button>          </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all light">
-        <a class="fancybox" href="img/portfolio/coupe.jpg" data-fancybox-group="group">
+        <a>
           <div class="awesome-img"><img src="img/portfolio/coupe.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Кабриолеты и купе</h3>
-            <p>Перевозим редкие и эксклюзивные автомобили в кузовах типа кабриолет и купе</p>
-          </div>
+            <button href="contact-us.php" class="readon">Перевезти</button>          </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all moto">
-        <a class="fancybox" href="img/portfolio/bike.jpg" data-fancybox-group="group">
+        <>
           <div class="awesome-img"><img src="img/portfolio/bike.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Мотоциклы и квадроциклы</h3>
-            <p>Перевезём ваш мотоциклетный транспорт любого вида быстро и безопасно</p>
-          </div>
+            <button href="contact-us.php" class="readon">Перевезти</button>          </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all light">
-        <a class="fancybox" href="img/portfolio/crossover.jpg" data-fancybox-group="group">
+        <a>
           <div class="awesome-img"><img src="img/portfolio/crossover.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Кроссоверы</h3>
-            <p>Перевозим компактные и полноразмерные кроссоверы любых модификаций и массогабаритных
-              размеров</p>
+            <button href="contact-us.php" class="readon">Перевезти</button>              размеров</p>
           </div>
         </a>
       </div>
@@ -690,8 +685,7 @@
           <div class="awesome-img"><img src="img/portfolio/offroad.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Пикапы и внедорожники</h3>
-            <p>Поможем вам перевезти внедорожные автомобили любого формата, в том числе бронированные</p>
-          </div>
+            <button href="contact-us.php" class="readon">Перевезти</button>          </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
@@ -701,8 +695,7 @@
           <div class="awesome-img"><img src="img/portfolio/commerce.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Коммерческий транспорт</h3>
-            <p>Погрузим на автовоз и доставим ваш легкий коммерческий транспорт к месту назначения в кратчайшие
-              сроки</p>
+            <button href="contact-us.php" class="readon">Перевезти</button>              сроки</p>
           </div>
         </a>
       </div>
@@ -713,8 +706,7 @@
           <div class="awesome-img"><img src="img/portfolio/microbus.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Микроавтобусы</h3>
-            <p>Наши автовозы приспособлены для перевозки любого транспорта, в том числе микроавтобусов</p>
-          </div>
+            <button href="contact-us.php" class="readon">Перевезти</button>          </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
@@ -724,8 +716,7 @@
           <div class="awesome-img"><img src="img/portfolio/bus.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Автобусы</h3>
-            <p>Специализированные прицепы позволяют производить транспортировку автобусов максимально эффективно</p>
-          </div>
+            <button href="contact-us.php" class="readon">Перевезти</button>          </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
@@ -735,9 +726,7 @@
           <div class="awesome-img"><img src="img/portfolio/truck.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Грузовики</h3>
-            <p>Тяжелые прицепы для транспортировки грузового автотранспорта позволяют перемещать несколько единиц
-              техники за раз</p>
-          </div>
+            <button href="contact-us.php" class="readon">Перевезти</button>          </div>
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
