--- a/moscow-chelyab.html
+++ b/moscow-chelyab.html
@@ -84,7 +84,7 @@
         <div class="col-md-2 col-lg-3">
           <div class="logo">
             <a href="index.php"><img class="logo-img" src="img/logo/logo-simple.svg" alt=""
-                                      width="150"/></a>
+                                     width="150"/></a>
           </div>
         </div>
         <!-- logo end -->
@@ -490,18 +490,18 @@
       <div class="awesome-portfolio-content">
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a class="fancybox" href="img/portfolio/sedan.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/sedan.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Седаны и хэтчбеки</h3>
-              <p>Перевозим легковые седаны и хэтчбеки любой конфигурации, массы, длины и других параметров</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all ligth">
-          <a class="fancybox" href="img/portfolio/universal.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/universal.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Универсалы</h3>
@@ -513,29 +513,29 @@
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a class="fancybox" href="img/portfolio/coupe.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/coupe.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Кабриолеты и купе</h3>
-              <p>Перевозим редкие и эксклюзивные автомобили в кузовах типа кабриолет и купе</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all moto">
-          <a class="fancybox" href="img/portfolio/bike.jpg" data-fancybox-group="group">
+          <>
             <div class="awesome-img"><img src="img/portfolio/bike.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Мотоциклы и квадроциклы</h3>
-              <p>Перевезём ваш мотоциклетный транспорт любого вида быстро и безопасно</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a class="fancybox" href="img/portfolio/crossover.jpg" data-fancybox-group="group">
+          <a>
             <div class="awesome-img"><img src="img/portfolio/crossover.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Кроссоверы</h3>
@@ -551,7 +551,7 @@
             <div class="awesome-img"><img src="img/portfolio/offroad.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Пикапы и внедорожники</h3>
-              <p>Поможем вам перевезти внедорожные автомобили любого формата, в том числе бронированные</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
@@ -574,7 +574,7 @@
             <div class="awesome-img"><img src="img/portfolio/microbus.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Микроавтобусы</h3>
-              <p>Наши автовозы приспособлены для перевозки любого транспорта, в том числе микроавтобусов</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
@@ -585,7 +585,7 @@
             <div class="awesome-img"><img src="img/portfolio/bus.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Автобусы</h3>
-              <p>Специализированные прицепы позволяют производить транспортировку автобусов максимально эффективно</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
@@ -596,8 +596,7 @@
             <div class="awesome-img"><img src="img/portfolio/truck.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Грузовики</h3>
-              <p>Тяжелые прицепы для транспортировки грузового автотранспорта позволяют перемещать несколько единиц
-                техники за раз</p>
+              <button href="contact-us.php" class="readon">Перевезти</button>
             </div>
           </a>
         </div>
@@ -606,7 +605,6 @@
     </div>
     <!-- awesome-portfolio end -->
   </div>
-</div>
 </div>
 <!-- features-area end -->
 
@@ -803,7 +801,7 @@
   <!-- bottom blog end -->
 </div>
 <!-- Form start -->
-<div class="landing__form">
+<div class="landing__form" id="form">
   <div class="container">
     <div class="row">
       <!-- contact-accordion start -->
@@ -842,7 +840,7 @@
                   </div>
                   <div class="col-md-12 col-sm-12">
                     <div class="textarea-contact">
-                      <label  class="form-label" for="textfield"><span>Сообщение</span></label>
+                      <label class="form-label" for="textfield"><span>Сообщение</span></label>
                       <textarea class="textfield" id="textfield" cols="30" rows="10"></textarea>
                     </div>
                   </div>
